<resources>
    <string name="app_name">NavigationDrawerTaskAssignment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome_message">Welcome, Robbie!</string>
    <string name="points_message">You currently have:</string>
    <string name="points_points">points!</string>
   <string name="title_activity_add_task_update">Edit</string>
    <string name="title_activity_add_task_new">New</string>

    <string name="title_placeholder">Title</string>
    <string name="description_placeholder">Description</string>
    <string name="points_label_placeholder">Points:</string>
    <string name="responsible_placeholder">Robbie de Gier</string>
    <string name="points_placeholder">100</string>
    <string name="choose_file">Choose file</string>
    <string name="enter_task_date">Enter task date</string>
    <string name="enter_task_title">Enter task title</string>
    <string name="enter_task_responsible">Enter task responsible</string>
    <string name="show_uploads">Show Uploads</string>
    <string name="upload">Upload</string>
    <string name="todo">TODO</string>
    <string-array name="pointsOptions">
        <item>50</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>250</item>
    </string-array>

    <string-array name="responsibleOptions">
        <item>Member 1</item>
        <item>Member 2</item>
        <item>Member 3</item>
        <item>Member 4</item>
        <item>Member 5</item>
    </string-array>



</resources>
